<resources>
    <string name="app_name">Member Planet</string>
    <string name="login_title">Sign In</string>
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_loginText">Sign In</string>
    <string name="login_dividerText">OR</string>
    <string name="login_signUpText">Sign Up For Account</string>
    <string name="login_forgotPasswordText">Forgot Password?</string>
    <string name="signUp_title">Sign Up</string>
    <string name="signUp_firstName">First Name</string>
    <string name="signUp_lastName">Last Name</string>
    <string name="signUp_number">Number</string>
    <string name="signUp_email">Email</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_answer">Answer</string>
    <string name="signUp_signUp">Sign Up</string>
    <string name="signUp_profession">Profession</string>
    <string name="signUp_organisation">Organisation</string>
    <string name="Employed">Employed</string>
    <string name="Unemployed">Unemployed</string>
    <string name="signUp_dob">Date Of Birth</string>
    <string name="signUp_code">Access Code</string>
    <string name="signUp_location">Address</string>
    <string name="editUser_instructionsText">Edit Your Details</string>
    <string name="editUser_firstName">First Name</string>
    <string name="editUser_lastName">Last Name</string>
    <string name="editText_number">Number</string>
    <string name="editText_email">Email</string>
    <string name="editUser_password">Password</string>
    <string name="editUser_oldPassword">Old Password</string>
    <string name="editUser_confirmPassword">Confirm Password</string>
    <string name="editUser_updatePassword">Update Password</string>
    <string name="editUser_answer">Answer</string>
    <string name="editUser_updateSecurityCredentials">Update Security Credentials</string>
    <string name="forgotPassword_instruction">Verify Your Security Credentials</string>
    <string name="forgotPassword_email">Email</string>
    <string name="forgotPassword_answer">Answer</string>
    <string name="forgotPassword_verify">Verify</string>
    <string name="forgotPassword_password">Password</string>
    <string name="forgotPassword_confirmPassword">Confirm Password</string>
    <string name="forgotPassword_updatePassword">Update Password</string>
    <string name="homeNewHeading">New</string>
    <string name="homeBrowseNew">Browse our newest products</string>
    <string name="homeFruitHeading">Fruits</string>
    <string name="homeBrowseFruit">Browse our fruit category</string>
    <string name="homeVegetableHeading">Vegetables</string>
    <string name="homeBrowseVegetable">Browse our vegetable category</string>
    <string name="homeNewMore">More</string>
    <string name="questionCaption">Enter Your Security Details</string>
    <string name="createnewpassword">Create New Password</string>
    <string name="securityoptions">Security Options</string>
    <string name="dummy_text_long">Lorem ipsium dolor sit amet</string>
    <string name="dummy_text_short">Lorem</string>
    <string name="lorem_ipsium">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="image">Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="navHome">News Feeds</string>
    <string name="navMyAccount">My Account</string>
    <string name="navGroups">Year Groups</string>
    <string name="navFilter">Filter</string>
    <string name="navMyProducts">Members</string>
    <string name="navWishList">My Wish List</string>
    <string name="navLogout">Logout</string>
    <string name="navAddProduct">Add Product</string>
    <string name="navtransaction">Transaction</string>
    <string name="navEvents">Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_txtEmail">Email address</string>
    <string name="login_txtPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="login_btnForgotPassword">Forgot Password?</string>
    <string name="viewProduct_descriptionTitle">Description</string>
    <string name="viewProduct_currencyPrefix">GhC</string>
    <string name="viewProduct_viewOnMap">View On Map</string>
    <string name="viewProduct_moreDescription">More Description</string>
    <string name="viewProduct_imageTitle">Images</string>
    <string name="viewProduct_mediaDescriptionTitle">Media Description</string>
    <string name="viewProduct_audioDescriptionText">Listen to audio description</string>
    <string name="viewProduct_videoDescriptionText">Watch video description</string>
    <string name="title_activity_def">def</string>
    <string name="action_settings">Settings</string>
    <string name="navLogin">Login</string>
    <string name="viewProduct_callFarmer">Call Farmer</string>
    <string-array name="security_questions">
        <item>Select your security question</item>
        <item>What is your mother's name?</item>
        <item>What is your favorite animal?</item>
        <item>What is your street name?</item>
        <item>What is the name of your first crush?</item>
        <item>What is your favorite school teacher's name?</item>
    </string-array>
    <string-array name="security_questions_id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="categories_name">
        <item>Select Category</item>
        <item>Tubers</item>
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Grains</item>
        <item>Meat</item>
    </string-array>
    <string-array name="categories_id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="regions">
        <item>Select Region</item>
        <item>Ashanti Region</item>
        <item>Brong Ahafo Region</item>
        <item>Central Region</item>
        
        <item>Eastern Region</item>
        <item>Greater Accra Region</item>
        <item>Northern Region</item>
        <item>Upper East Region</item>
        <item>Upper West Region</item>
        <item>Volta Region</item>
        <item>Western Region</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
</resources>