<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navHome" />
        <item
            android:id="@+id/nav_item_account"
            android:icon="@drawable/ic_user"
            android:title="@string/navMyAccount" />
        <item
            android:id="@+id/nav_item_products"
            android:icon="@drawable/ic_basket"
            android:title="@string/navMyProducts" />
        <item
            android:id="@+id/nav_item_category"
            android:icon="@drawable/ic_collections"
            android:title="@string/navGroups" />
        <item
            android:id="@+id/nav_item_transaction"
            android:icon="@drawable/ic_collections"
            android:title="@string/navtransaction" />
    </group>

    <item android:title="Extras">
        <menu>
            <item
                android:id="@+id/nav_item_addProduct"
                android:icon="@drawable/ic_upload"
                android:title="Scan" />

            <item
                android:id="@+id/nav_item_logout"
                android:icon="@drawable/ic_log_out"
                android:title="@string/navLogout" />

        </menu>
    </item>
</menu>